Take the number of failed/pending scenarios into account
Signed-off-by: Johannes Thorn <2544827+johthor@users.noreply.github.com>